# pact-plugins

./: .gitignore  CLAUDE.md  README.md
.github/: copilot-instructions.md
.github/workflows/: examples.yml  gradle.yml  plugin-cli.yml  release.yml  rust.yml  smartbear-issue-label-added.yml  trigger_pact_docs_update.yml
cli/: CHANGELOG.md  Cargo.toml  README.md  build.rs  release.groovy  release.sh  repository.index
cli/src/: install.rs  lib.rs  list.rs  main.rs  repository.rs  tests.rs
cli/tests/: cli-tests.rs
cli/tests/cmd/: disable.stdout  disable.toml  enable.stdout  enable.toml  env.stdout  env.toml  install.stdout  install.toml  list.stdout  list.toml  main.stderr  main.toml  remove.stdout  remove.toml
docs/: content-matcher-design.md  content-matcher-sequence-consumer-test.txt  content-matcher-sequence-provider-verification.txt  lua-plugin-reference.md  matching-rule-definition-expressions.md  matching-rule-definition.g4  pact-plugin.txt  plugin-driver-design.md  protocol-plugin-design.md  protocol-transport-sequence-consumer-test.txt  protocol-transport-sequence-provider-test.txt  writing-plugin-guide.md
docs/known-issues/: consumer-dsl-plugin-config-inconsistencies.md
docs/proposals/: 001_V2_Plugin_Interface.md  002_Support_script_language_plugins.md  003_Support_WASM_plugins.md  004_Verification_contract_cleanup.md  005_Plugin_capability_negotiation_and_versioning.md  006_Field_level_matchers_and_generators.md  007_Driver_plugin_callback_model.md  008_Plugin_observability_and_logging.md  009_Host_provided_core_matching_and_generation.md  010_Support_Python_script_plugins.md  README.md
drivers/jvm/: CHANGELOG.md  README.md  build.gradle  gradle.properties  release.groovy  settings.gradle
drivers/jvm/config/: detekt-config.yml
drivers/jvm/core/: build.gradle  jreleaser.yml
drivers/jvm/driver/: build.gradle
drivers/jvm/dsl/: build.gradle
drivers/rust/: Cargo.toml
drivers/rust/driver/: CHANGELOG.md  Cargo.toml  README.md  build.rs  musl-build.sh  plugin.proto  release.groovy  repository.index
drivers/rust/driver/src/: ContentMatcher.kt  call_chain.rs  catalogue_manager.rs  child_process.rs  child_process_windows.rs  content.rs  core_capabilities.rs  download.rs  grpc_plugin.rs  lib.rs  lua_plugin.rs  metrics.rs  mock_server.rs  plugin_host.rs  plugin_log_sink.rs  plugin_manager.rs  plugin_models.rs  proto.rs  proto_v2.rs  repository.rs  test_context.rs  utils.rs  verification.rs  wasm_plugin.rs
drivers/rust/driver/src/wasm/: mod.rs
drivers/rust/driver/tests/: pact.rs
drivers/rust/driver/tests/fixtures/: jwt-test-key.pem
drivers/rust/driver/wit/: plugin.wit
drivers/rust/driver_ffi/: Cargo.toml  README.md
drivers/rust/driver_ffi/src/: lib.rs
drivers/rust/driver_pact_tests/: Cargo.toml
drivers/rust/driver_pact_tests/tests/: pact.rs
examples/csv/: README.md
examples/csv-consumer/: build.gradle
examples/csv/csv-consumer-jvm/: build.gradle  settings.gradle
examples/csv/csv-consumer-rust/: Cargo.toml
examples/csv/csv-consumer-rust/src/: lib.rs
examples/csv/csv-provider/: Cargo.toml
examples/csv/csv-provider-jvm/: settings.gradle
examples/gRPC/: README.md
examples/gRPC/area_calculator/: .gitignore  Makefile  README.md  area_calculator.proto
examples/gRPC/area_calculator/consumer-rust/: Cargo.toml  README.md
examples/gRPC/area_calculator/consumer-rust/src/: lib.rs
examples/gRPC/grpc_status/consumer-rust/: Cargo.toml  build.rs
examples/gRPC/grpc_status/consumer-rust/src/: lib.rs
examples/gRPC/http-plus-grpc/consumer-rust/: Cargo.toml
examples/gRPC/http-plus-grpc/consumer-rust/src/: lib.rs
examples/gRPC/metadata/provider-rust/: Cargo.toml  build.rs
examples/gRPC/metadata/provider-rust/src/: main.rs
examples/helloworld/: README.md
examples/helloworld-grpc/: README.md
examples/jsonrpc/sum_calculator/consumer-rust/: Cargo.toml
examples/jsonrpc/sum_calculator/consumer-rust/src/: lib.rs
examples/jsonrpc/sum_calculator/provider-rust/: Cargo.toml
examples/jsonrpc/sum_calculator/provider-rust/src/: main.rs
examples/jwt/: README.md
examples/jwt/consumer/: Cargo.toml
examples/jwt/consumer/src/: lib.rs
examples/jwt/jwt-consumer-rust/: Cargo.toml
examples/jwt/jwt-consumer-rust/src/: lib.rs
examples/jwt/jwt-provider-rust/: Cargo.toml
examples/jwt/jwt-provider-rust/src/: main.rs
examples/protobuf/: Dockerfile.rust  README.md
examples/protobuf/area_calculator_example/consumer/: Cargo.toml  build.rs
examples/protobuf/area_calculator_example/consumer/src/: lib.rs
examples/protobuf/protobuf-consumer-rust/: Cargo.toml  README.md  build.rs
examples/protobuf/protobuf-consumer-rust/src/: lib.rs
examples/protobuf/test_google_struct/consumer/: Cargo.toml
examples/protobuf/test_google_struct/consumer/src/: lib.rs
examples/protobuf/test_google_struct/provider/: Cargo.toml  build.rs
examples/protobuf/test_google_struct/provider/src/: main.rs
interfaces/wasm/: plugin.wit
plugins/: README.md
plugins/csv/: Cargo.toml  Cross.toml  README.md  build.rs  pact-plugin.json  release.sh
plugins/csv-v2/: Cargo.toml  README.md  build.rs  pact-plugin.json
plugins/csv-v2/src/: lib.rs
plugins/csv/proto/: plugin.proto  plugin_v2.proto
plugins/csv/src/: csv_content.rs  main.rs  parser.rs  proto.rs  utils.rs
plugins/jsonrpc/: Cargo.toml  README.md  build.rs  pact-plugin.json
plugins/jsonrpc/src/: jsonrpc.rs  main.rs  mock_server.rs  pact.rs  proto.rs
plugins/jwt/: README.md  inspect.lua  install-local.sh  json.lua  jwt.lua  matching.lua  pact-plugin.json  plugin.lua  utils.lua
plugins/jwt/wasm-plugin/: Cargo.toml  jwt_plugin.wasm  pact-plugin.json
plugins/jwt/wasm-plugin/src/: jwt.rs  lib.rs  matching.rs
plugins/jwt/wasm-plugin/wit/: plugin.wit
plugins/protobuf/: README.md  build.gradle  pact-plugin.json  settings.gradle
proto/: plugin.proto  plugin_v2.proto
repository/: repository.index  repository.index.sha256
scripts/: ci-install-protobuf-plugin.sh  install-plugin-cli.sh  install-protobuf-plugin.sh  install-verifier-cli.sh  run-grpc-examples.sh  wait_for_http.sh
(+230 files in other folders)
