[package]
name = "pact-plugin-cli"
version = "0.2.0"
edition = "2021"
authors = ["Ronald Holshausen <ronald.holshausen@smartbear.com>"]
description = "CLI utility for Pact plugins"
homepage = "http://www.pact.io"
repository = "https://github.com/pact-foundation/pact-plugins"
readme = "README.md"
keywords = ["pact"]
license = "MIT"
exclude = [
    "*.iml"
]

[dependencies]
pact-plugin-driver = "0.7.0"
clap = { version = "4.5.16", features = [ "derive", "cargo", "env" ] }
comfy-table = "7.1.1"
home = "0.5.9"
anyhow = "1.0.86"
serde = { version = "1.0.203", features = [ "derive" ] }
serde_json = "1.0.120"
itertools = "0.13.0"
requestty = "0.5.0"
reqwest = { version = "0.12.5", default-features = false, features = ["rustls-tls-native-roots", "json", "stream"] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
chrono = { version = "0.4.22", features = ["serde"]}
toml = "0.8.14"
url = "2.5.2"
parse-zoneinfo = "0.3.1" # requires pact_model to be updated
# https://github.com/chronotope/parse-zoneinfo/commit/61557cd5407e494770285d1925d64c42973f5db0

[dev-dependencies]
trycmd = "0.15.4"
tempfile = "3.10.1"
expectest = "0.12.0"
test-log = "0.2.16"
env_logger = "0.11.3"

[profile.release]
strip = true
opt-level = "z" 
codegen-units = 1
lto = true

# References
# https://doc.rust-lang.org/stable/rustc/codegen-options/
# https://doc.rust-lang.org/rustc/profile-guided-optimization.html
# https://github.com/johnthagen/min-sized-rust
