[package]
name = "pact-csv-v2-plugin"
version = "0.0.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
#csv = "1.1"
#anyhow = "1.0.42"
#serde_json = "1.0.66"
#bytes = { version = "1", features = ["serde"] }
#either = "1.6.1"
#itertools = "0.10.1"
wit-bindgen = { git = "https://github.com/bytecodealliance/wit-bindgen", version = "0.3.0" }
log = "0.4"
simplelog = "0.12.1"
maplit = "1.0.2"
