[package]
name = "pact-csv-plugin"
version = "0.0.4"
edition = "2021"

[dependencies]
tonic = "0.8.0"
prost = "0.11.0"
prost-types = "0.11.1"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1.1.2", features = ["v4"] }
futures = "0.3"
async-std = "1.9.0"
log = "0.4"
env_logger = "0.10.0"
maplit = "1.0.2"
pact_matching = "1.0.6"
pact_models = "1.0.9"
pact-plugin-driver = "0.3.3"
csv = "1.2.1"
logos = "0.12.0"
anyhow = "1.0.42"
bigdecimal = "0.3.0"
serde_json = "1.0.66"
bytes = { version = "1", features = ["serde"] }
either = "1.6.1"
itertools = "0.10.1"

[build-dependencies]
tonic-build = "0.8.0"
