[package]
name = "pact-csv-plugin"
version = "0.0.4"
edition = "2021"

[dependencies]
tonic = "0.9.2"
prost = "0.11.9"
prost-types = "0.11.9"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1.4.1", features = ["v4"] }
futures = "0.3"
async-std = "1.12.0"
log = "0.4"
env_logger = "0.10.0"
maplit = "1.0.2"
pact_matching = "1.1.5"
pact_models = "1.1.11"
pact-plugin-driver = "0.4.5"
csv = "1.2.1"
logos = "0.12.0"
anyhow = "1.0.42"
bigdecimal = "0.4.1"
serde_json = "1.0.66"
bytes = { version = "1", features = ["serde"] }
either = "1.9.0"
itertools = "0.11.0"

[build-dependencies]
tonic-build = "0.9.2"
