[package]
name = "pact-jsonrpc-plugin"
version = "0.1.0-beta.1"
edition = "2021"

[dependencies]
anyhow = "1"
axum = "0.8"
env_logger = "0.11"
futures = "0.3"
log = "0.4"
prost = "0.14.3"
prost-types = "0.14.1"
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tokio-stream = { version = "0.1", features = ["net"] }
tonic = "0.14.6"
tonic-prost = "0.14.6"
uuid = { version = "1", features = ["v4"] }

[build-dependencies]
tonic-prost-build = "0.14.6"
