[package]
name = "pact-plugin-driver"
version = "0.7.5"
description = "Pact support library that provides an interface for interacting with Pact plugins"
edition = "2024"
documentation = "https://docs.rs/pact-plugin-driver"
homepage = "http://www.pact.io"
repository = "https://github.com/pact-foundation/pact-plugins"
readme = "README.md"
keywords = ["testing", "pact", "cdc"]
license = "MIT"
authors = ["Ronald Holshausen <uglyog@gmail.com>"]
exclude = [
    "*.iml"
]

[features]
default = ["datetime", "xml"]
datetime = ["pact_models/datetime"] # Support for date/time matchers and expressions
xml = ["pact_models/xml"] # support for matching XML documents

[dependencies]
anyhow = "1.0.96"
async-trait = "0.1.86"
backtrace = "0.3.74"
bytes = "1.10.0"
chrono = { version = "0.4.39", features = ["serde"], default-features = false }
flate2 = "1.0.35"
futures-util = "0.3.31"
home = "0.5.11"
indicatif = "0.17.11"
itertools = "0.14.0"
lazy_static = "1.5.0"
log = "0.4.26"
maplit = "1.0.2"
md5 = "0.7.0"
os_info = "3.10.0"
pact_models = { version = "~1.3.3", default-features = false }
prost = "0.13.5"
prost-types = "0.13.5"
regex = "1.11.1"
reqwest = { version = "0.12.20", default-features = false, features = ["rustls-tls-native-roots", "json", "gzip", "deflate", "stream"] }
semver = "1.0.25"
serde_json = "1.0.139"
serde = { version = "1.0.218",  features = ["derive"] }
sha2 = "0.10.8"
sysinfo = "0.30.13"
tar = "0.4.43"
toml = "0.8.20"
tokio = { version = "1.45.1", features = ["full"] }
tonic = "0.13.1"
tracing = { version = "0.1.41", features = [ "log" ] }
tracing-core = "0.1.33"
uuid = { version = "1.16.0", features = ["v4"] }
zip = "2.4.1"

[dev-dependencies]
env_logger = "0.11.6"
expectest = "0.12.0"
pretty_assertions = "1.4.1"
tempdir = "0.3.7"
test-log = "0.2.17"

[build-dependencies]
tonic-build = "0.13.1"
