[package]
name = "pact-plugin-driver-ffi"
version = "0.0.0"
edition = "2018"

[dev-dependencies]
pact-plugin-driver = { version = "~0.7", path = "../driver" }
pact_ffi = { version = "~0.4.28", git = "https://github.com/pact-foundation/pact-reference.git" }
env_logger = "0.11.3"
expectest = "0.12.0"
serde_json = "1.0.120"
reqwest = { version = "0.12.5", default-features = false, features = ["rustls-tls-native-roots", "blocking", "json"] }
csv = "1.3.0"
prost = "0.13.1"
prost-types = "0.13.1"
test-log = "0.2.16"
tokio = { version = "1.38.0", features = ["full"] }
tonic = "0.13.1"
