[package]
name = "pact-plugin-driver-ffi"
version = "0.0.0"
edition = "2018"

[dev-dependencies]
pact-plugin-driver = { version = "~1.0.0", path = "../driver" }
pact_ffi = "~0.5.4"
env_logger = "0.11.10"
expectest = "0.12.0"
serde_json = "1.0.149"
reqwest = { version = "0.12.28", default-features = false, features = ["rustls-tls-native-roots", "blocking", "json"] }
prost = "0.14.3"
test-log = "0.2.20"
tokio = { version = "1.52.3", features = ["full"] }
tonic = "0.14.6"

[patch.crates-io]
pact_ffi = { git = "https://github.com/pact-foundation/pact-reference.git" }
pact_matching = { git = "https://github.com/pact-foundation/pact-reference.git" }
pact_mock_server = { git = "https://github.com/pact-foundation/pact-core-mock-server.git" }
