[package]
name = "driver_pact_tests"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
prost = "0.13.1"
prost-types = "0.13.1"

[dev-dependencies]
pact-plugin-driver = { version = "~0.7", path = "../driver" }
expectest = "0.12.0"
env_logger = "0.11.3"
pact_consumer = "~1.3.0"
async-trait = "0.1.81"
test-log = "0.2.16"

