[package]
name = "csv-consumer-rust"
version = "0.0.0"
edition = "2018"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = "0.11.4"
anyhow = "1.0.43"
csv = "1.1.6"

[dev-dependencies]
expectest = "0.12.0"
env_logger = "0.10.0"
pact_models = "1.0.9"
pact_matching = "1.0.6"
pact_mock_server = "1.0.1"
pact_consumer = "0.10.7"
pact-plugin-driver = "0.4.1"
serde_json = "1.0.66"
regex = "1.4.6"
fakeit = "1.1.1"
rand = "0.8.4"
test-log = "0.2.11"
tracing-subscriber = "0.3.16"
