[package]
name = "csv-consumer-rust"
version = "0.0.0"
edition = "2018"

[dependencies]
tokio = { version = "1.38.0", features = ["full"] }
reqwest = "0.12.5"
anyhow = "1.0.86"
csv = "1.3.0"

[dev-dependencies]
expectest = "0.12.0"
env_logger = "0.11.3"
pact_models = "1.2.2"
pact_consumer = "~1.2.3"
serde_json = "1.0.120"
regex = "1.10.5"
fakeit = "1.2.0"
rand = "0.8.5"
test-log = "0.2.16"
