[package]
name = "csv-consumer-rust"
version = "0.0.0"
edition = "2018"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = "0.13.4"
anyhow = "1.0.86"
csv = "1.3.0"

[dev-dependencies]
expectest = "0.12.0"
env_logger = "0.11.3"
pact_models = "1.3.10"
pact_consumer = "~1.4.4"
serde_json = "1.0.120"
regex = "1.10.5"
fakeit = "1.2.0"
rand = "0.8.5"
test-log = "0.2.16"

[patch.crates-io]
pact-plugin-driver = { version = "1.0.0-beta.1", path = "../../../drivers/rust/driver" }
pact_consumer = { git = "https://github.com/pact-foundation/pact-reference.git" }
pact_matching = { git = "https://github.com/pact-foundation/pact-reference.git" }
pact_mock_server = { git = "https://github.com/pact-foundation/pact-core-mock-server.git" }
