[package]
name = "jwt-consumer"
version = "0.1.0"
edition = "2021"

[dependencies]

[dev-dependencies]
expectest = "0.12.0"
env_logger = "0.11.3"
pact_models = "~1.2.0"
pact_consumer = "~1.3.0"
pact-plugin-driver = "~0.7.0"
reqwest = "0.12.4"
serde_json = "1.0.117"
test-log = "0.2.11"
tokio = { version = "1.37.0", features = ["full"] }

[patch.crates-io]
pact-plugin-driver = { path = '../../../drivers/rust/driver' }
pact_consumer = { path = "/home/ronald/Development/Projects/Pact/pact-reference/rust/pact_consumer" }
