[package]
name = "jwt-consumer"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0.203", features = ["derive"] }

[dev-dependencies]
expectest = "0.12.0"
env_logger = "0.11.3"
jsonwebtoken = "9.3.0"
maplit = "1.0.2"
pact_models = "~1.2.0"
pact_consumer = "~1.3.0"
pact-plugin-driver = "~0.7.0"
pact_mock_server = "~1.2.8"
pact_matching = "~1.2.3"
reqwest = "0.12.4"
serde_json = "1.0.117"
test-log = "0.2.11"
tokio = { version = "1.37.0", features = ["full"] }

[patch.crates-io]
pact-plugin-driver = { path = '../../../drivers/rust/driver' }
pact_consumer = { path = "/home/ronald/Development/Projects/Pact/pact-reference/rust/pact_consumer" }
pact_matching = { path = "/home/ronald/Development/Projects/Pact/pact-reference/rust/pact_matching" }
pact_mock_server = { path = "/home/ronald/Development/Projects/Pact/pact-core-mock-server/pact_mock_server" }
