[package]
name = "jwt-consumer"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0.203", features = ["derive"] }

[dev-dependencies]
expectest = "0.12.0"
env_logger = "0.11.3"
jsonwebtoken = "9.3.0"
maplit = "1.0.2"
pact_models = "~1.2.2"
pact_consumer = "~1.3.0"
pact-plugin-driver = { version = "0.7.1", features = ["default", "lua", "wasm"] }
reqwest = "0.12.4"
serde_json = "1.0.117"
test-log = "0.2.11"
tokio = { version = "1.37.0", features = ["full"] }

[patch.crates-io]
pact-plugin-driver = { version = "0.7.1",  path = '../../../drivers/rust/driver' }
pact_consumer = { path = "/home/ronald/Development/Projects/Pact/pact-reference/rust/pact_consumer" }
