[package]
name = "protobuf-consumer-rust"
version = "0.0.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
anyhow = "1.0.70"
tonic = "0.12.0"
prost = "0.13.1"
prost-types = "0.13.1"

[dev-dependencies]
expectest = "0.12.0"
env_logger = "0.11.5"
test-log = "0.2.11"
pact_models = "1.2.2"
pact_consumer = "1.2.3"
# Windows plugin shutdown
pact-plugin-driver = { version = "0.7.0", path = "../../../drivers/rust/driver" }
serde_json = "1.0.95"
regex = "1.10.5"
fakeit = "1.1.1"
rand = "0.8.5"
maplit = "1.0.2"

[build-dependencies]
tonic-build = "0.12.0"
parse-zoneinfo = "0.3.1" # requires pact_model to be updated
# https://github.com/chronotope/parse-zoneinfo/commit/61557cd5407e494770285d1925d64c42973f5db0
