[package]
name = "protobuf-consumer-rust"
version = "0.0.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
anyhow = "1.0.102"
tonic = "0.14.6"
prost = "0.14.3"
prost-types = "0.14.3"
tonic-prost = "0.14.6"

[dev-dependencies]
expectest = "0.12.0"
env_logger = "0.11.10"
test-log = "0.2.20"
pact_models = "~1.3.10"
pact_consumer = "~1.4.3"
# Windows plugin shutdown
pact-plugin-driver = { version = "0.7.0", path = "../../../drivers/rust/driver" }
serde_json = "1.0.149"
regex = "1.12.3"
fakeit = "1.4.1"
rand = "0.10.1"
maplit = "1.0.2"

[build-dependencies]
tonic-prost-build = "0.14.6"
parse-zoneinfo = "0.5.0"
