[package]
name = "jwt-plugin"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = "1.0.86"
base64 = "0.22.1"
pact_models = { version = "1.2.2", default-features = false }
serde_json = "1.0.120"
rsa = { version = "0.9.6", features = ["sha2"] }
wit-bindgen = "0.28.0"

[dev-dependencies]
expectest = "0.12.0"

[build]
target = "wasm32-wasi"
