[package]
name = "consumer-rust"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
anyhow = "1.0.70"
tonic = "0.9.0"
prost = "0.11.8"
prost-types = "0.11.8"
tracing = { version = "0.1", features = [ "log-always" ] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
expectest = "0.12.0"
env_logger = "0.10.0"
pact_consumer = "0.10.7"
pact-plugin-driver = "0.4.1"
serde_json = "1.0.95"
maplit = "1.0.2"

[build-dependencies]
tonic-build = "0.9.0"
