[package]
name = "consumer-rust"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
anyhow = "1.0.75"
tonic = "0.10.2"
prost = "0.12.1"
prost-types = "0.12.1"
tracing = { version = "0.1", features = [ "log-always" ] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
expectest = "0.12.0"
env_logger = "0.10.0"
pact_consumer = "1.0.4"
pact-plugin-driver = "0.4.5"
serde_json = "1.0.107"
maplit = "1.0.2"

[build-dependencies]
tonic-build = "0.10.2"
