[package]
name = "consumer-rust"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
anyhow = "1.0.70"
tonic = "0.12.0"
prost = "0.13.1"
prost-types = "0.13.1"
tracing = { version = "0.1", features = [ "log-always" ] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
expectest = "0.12.0"
env_logger = "0.11.3"
pact_consumer = "~1.4.2"
# Windows plugin shutdown
pact-plugin-driver = { version = "0.7.0", path = "../../../../drivers/rust/driver" }
serde_json = "1.0.95"
maplit = "1.0.2"

[build-dependencies]
tonic-build = "0.12.0"
parse-zoneinfo = "0.3.1" # requires pact_model to be updated
# https://github.com/chronotope/parse-zoneinfo/commit/61557cd5407e494770285d1925d64c42973f5db0
