[package]
name = "consumer-rust"
version = "0.0.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
anyhow = "1.0.86"
tonic = "0.12.0"
prost = "0.13.1"
prost-types = "0.13.1"
tracing = { version = "0.1", features = [ "log-always" ] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
bytes = "1.7.1"
env_logger = "0.11.3"
expectest = "0.12.0"
maplit = "1.0.2"
pact_consumer = "~1.4.2"
pact-plugin-driver = { version = "0.7.0", path = "../../../../drivers/rust/driver" }
reqwest = "0.12.7"
serde_json = "1.0.120"
test-log = "0.2.16"

[build-dependencies]
tonic-build = "0.12.0"

