[package]
name = "provider-rust"
version = "0.1.0"
edition = "2021"

[dependencies]
tonic = "=0.11.0"
prost = "=0.12.6"
prost-types = "=0.12.6"
tokio = { version = "1.38.0", features = ["full"] }
tracing = "0.1.37"
tracing-core = "0.1.30"
tracing-subscriber = { version = "0.3.16", features = ["env-filter", "local-time", "tracing-log"] }
regex = "1.10.5"

[build-dependencies]
tonic-build = "=0.11.0"
