[package]
name = "consumer-rust"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }

[dev-dependencies]
env_logger = "0.11"
expectest = "0.12"
pact-plugin-driver = "1.0.0-beta.1"
pact_consumer = "~1.4.4"
test-log = "0.2"

[patch.crates-io]
pact-plugin-driver = { version = "1.0.0-beta.1", path = "../../../../drivers/rust/driver" }
pact_consumer = { git = "https://github.com/pact-foundation/pact-reference.git" }
pact_matching = { git = "https://github.com/pact-foundation/pact-reference.git" }
pact_mock_server = { git = "https://github.com/pact-foundation/pact-core-mock-server.git" }
