[package]
name = "provider-rust"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
axum = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }

[dev-dependencies]
env_logger = "0.11"
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
test-log = "0.2"
