[package]
name = "area_calculator-consumer"
version = "0.0.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
anyhow = "1.0.43"
tonic = "0.9.2"
prost = "0.11.3"
prost-types = "0.11.2"

[dev-dependencies]
expectest = "0.12.0"
env_logger = "0.10.0"
pact_models = "~1.2.1"
pact_matching = "~1.2.4"
pact_consumer = "~1.2.2"
pact-plugin-driver = "0.6.2"
serde_json = "1.0.66"
regex = "1.4.6"
fakeit = "1.1.1"
rand = "0.8.4"
maplit = "1.0.2"
futures = "0.3.19"
reqwest = "0.11.9"
bytes = "1.1.0"
test-log = "0.2.11"

[build-dependencies]
tonic-build = "0.9.2"
parse-zoneinfo = "0.3.1" # requires pact_model to be updated
# https://github.com/chronotope/parse-zoneinfo/commit/61557cd5407e494770285d1925d64c42973f5db0

[patch.crates-io]
# Windows plugin shutdown
pact-plugin-driver = { version = "0.6.2", path = "../../../../drivers/rust/driver" }