[package]
name = "google_struct-consumer"
version = "0.0.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
anyhow = "1.0.86"
tonic = "0.12.0"
prost = "0.13.1"
prost-types = "0.13.1"

[dev-dependencies]
expectest = "0.12.0"
maplit = "1.0.2"
pact_models = "~1.2.3"
pact_matching = "~1.2.5"
pact_consumer = "~1.3.0"
serde_json = "1.0.122"
test-log = "0.2.16"

[build-dependencies]
tonic-build = "0.12.0"
