[package]
name = "google_struct-provider"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.8.0"
anyhow = "1.0.86"
bytes = "1.7.1"
env_logger = "0.11.5"
log = "0.4.22"
maplit = "1.0.2"
prost = "0.13.1"
prost-types = "0.13.1"
rand = "0.8.5"
serde_json = "1.0.122"
tonic = "0.12.0"

[build-dependencies]
tonic-build = "0.12.0"
